# hiors

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  start_dobot.sh
config/: base.yaml  reward_classifier.yaml
config/algo/: reject_sampling_pi0.yaml  sac_pi0.yaml
config/task/: dobot_pnp.yaml
docs/: DOBOT_TUTORIAL.md  INSTALL.md
examples/: train_reward_classifier.py  train_rlpd.py
examples/experiments/dobot_pnp/: config.py  run_actor.sh  run_actor_data_collection.sh  run_actor_eval.sh  run_actor_reject_sampling.sh  run_learner.sh  run_learner_data_collection.sh  run_learner_reject_sampling.sh  run_learner_sft.sh  train_reward.sh  wrapper.py
serl_launcher/: .gitignore  pyproject.toml
serl_launcher/serl_launcher/agents/: __init__.py
serl_launcher/serl_launcher/agents/continuous/: sac_pi0.py
serl_launcher/serl_launcher/common/: encoding.py  tensorboard.py  typing.py  wandb.py
serl_launcher/serl_launcher/data/: data_store.py  dataset.py  replay_buffer.py
serl_launcher/serl_launcher/networks/: actor_critic_nets.py  lagrange.py  mlp.py  reward_classifier.py  transformer.py
serl_launcher/serl_launcher/networks/pi0/: configuration_pi0.py  modeling_pi0.py  paligemma_with_expert.py
serl_launcher/serl_launcher/utils/: device.py  launcher.py  logging_utils.py  tools.py  train_utils.py
serl_launcher/serl_launcher/vision/: data_augmentations.py  resnet_v1.py
serl_launcher/serl_launcher/wrappers/: chunking.py  norm.py  remap.py  reward_wrapper.py  serl_obs_wrappers.py  video_wrapper.py
serl_robot_infra/: pyproject.toml
serl_robot_infra/dobot_env/deploy/: inference_xtrainer.py
serl_robot_infra/dobot_env/envs/: __init__.py  dobot_env.py
tests/: test_replay_buffer.py
tools/: merge_video.py
