[project]
name = "hiors"
version = "0.1.0"
description = "flow-matching rl"
requires-python = ">=3.11,<3.12"
dependencies = [
    "serl-launcher",
    "serl-robot-infra", 
    "openpi-client",
]

[dependency-groups]
dev = [
    "hydra-core==1.3.2",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
    "pre-commit>=4.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "termcolor",
    "pynvml>=12.0.0",
]

[tool.uv.sources]
openpi-client = { workspace = true }
serl-robot-infra = { workspace = true }
serl-launcher = { workspace = true }
#lerobot = { git = "https://github.com/huggingface/lerobot", rev = "ed83cbd4f2091a3e97cdd0c48cc657020c037240" }

[tool.uv.workspace]
members = ["packages/*", "serl_robot_infra", "serl_launcher"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["docker", "third_party"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "B",
    "C4",
    "DTZ",
    "E4",
    "E7",
    "E9",
    "F",
    "FBT",
    "FURB",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PD",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLR1",
    "PLR5",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "UP",
    "W",
]
ignore = [
    "F722",   # Conflicts with array typing.
    "T201",   # We use print statements.
    "PD008",  # Lots of false positives.
    "ISC001", # Disabling to support ruff format.
]
unfixable = [
    "B905", # Fix defaults to strict=False, which is not what we want.
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
single-line-exclusions = ["collections.abc", "typing", "typing_extensions"]
known-third-party = ["wandb"]

[tool.pytest.ini_options]
markers = ["manual: should be run manually."]
testpaths = ["src", "scripts", "packages"] 